--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,17 +4,17 @@
       <img
         src="/images/home.png"
         alt="kimhyejin"
-        style="max-width:260px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
+        style="max-width:200px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
       >
 
 <h1 style="
   font-size: 15px;     /* ← 폰트 크기 */
-  font-weight: 200;    /* ← 폰트 굵기 (100~900 중 숫자 작을수록 얇음) */
+  font-weight: 100;    /* ← 폰트 굵기 (100~900 중 숫자 작을수록 얇음) */
   color: #666;         /* ← 폰트 색상 */
   margin: 0;
 ">
 </h1>
-ある季節のはじまりを信じてみよう。
+"엄마, 내 눈은 언제 하트로 변해요"
     </div>
   </main>
 {{ end }}
