--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,9 +2,9 @@
   <main style="width:100%;min-height:80vh;display:flex;align-items:center;justify-content:center;">
     <div style="text-align:center">
       <img
-        src="/images/home.png"
+        src="/images/main.jpg"
         alt="kimhyejin"
-        style="max-width:200px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
+        style="max-width:300px;height:auto;border-radius:0;display:block;margin:0 auto 0px;"
       >
 
 <h1 style="
@@ -14,7 +14,7 @@
   margin: 0;
 ">
 </h1>
-"엄마, 내 눈은 언제 하트로 변해요"
+  
     </div>
   </main>
 {{ end }}
