update: 새 글 및 설정 수정

--- a/layouts/section/photos.html
+++ b/layouts/section/photos.html
@@ -9,7 +9,7 @@
       line-height:1.5;
       letter-spacing:0.2px;
       margin:40px 0 28px;">
- {{ .Title | safeHTML }}
+어느 계절의 시작을 믿어보자
   </h1>
 
 
