update: 새 글 및 설정 수정

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -16,7 +16,7 @@
 
   <section class="intro" style="margin-bottom:24px;">
     <p class="ko" style="margin:0 0 12px 0;font-size:15px;color:#333;line-height:1.7;">
-       수많은 인덱스, 밑줄 그리고 낙서인지 그림인지 알 수 없는 흔적들, 스스로에게 묻는 질문들까지. <br>노트에 적힌 메모들을 한곳에 모으고 있습니다. 
+       수많은 인덱스, 밑줄, 그리고 낙서인지 그림인지 알 수 없는 흔적들, 스스로에게 묻는 질문들까지. <br>노트에 적힌 메모들을 한곳에 모으고 있습니다. 
 </p>
      </section>
 
